nohup.out
Server start on port 80
Server start on port 80
TypeError: path must be absolute or specify root to res.sendFile
    at ServerResponse.sendFile (/home/heng/myWebsite/node_modules/express/lib/response.js:421:11)
    at /home/heng/myWebsite/app.js:17:9
    at Layer.handle [as handle_request] (/home/heng/myWebsite/node_modules/express/lib/router/layer.js:95:5)
    at next (/home/heng/myWebsite/node_modules/express/lib/router/route.js:137:13)
    at Route.dispatch (/home/heng/myWebsite/node_modules/express/lib/router/route.js:112:3)
    at Layer.handle [as handle_request] (/home/heng/myWebsite/node_modules/express/lib/router/layer.js:95:5)
    at /home/heng/myWebsite/node_modules/express/lib/router/index.js:281:22
    at Function.process_params (/home/heng/myWebsite/node_modules/express/lib/router/index.js:335:12)
    at next (/home/heng/myWebsite/node_modules/express/lib/router/index.js:275:10)
    at SendStream.error (/home/heng/myWebsite/node_modules/serve-static/index.js:121:7)
Server start on port 80
Server start on port 8080
/home/heng/myWebsite/app.js:29
}
^

SyntaxError: missing ) after argument list
    at new Script (vm.js:74:7)
    at createScript (vm.js:246:10)
    at Object.runInThisContext (vm.js:298:10)
    at Module._compile (internal/modules/cjs/loader.js:657:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:700:10)
    at Module.load (internal/modules/cjs/loader.js:599:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:538:12)
    at Function.Module._load (internal/modules/cjs/loader.js:530:3)
    at Function.Module.runMain (internal/modules/cjs/loader.js:742:12)
    at startup (internal/bootstrap/node.js:266:19)
/home/heng/myWebsite/app.js:29
}
^

SyntaxError: missing ) after argument list
    at new Script (vm.js:74:7)
    at createScript (vm.js:246:10)
    at Object.runInThisContext (vm.js:298:10)
    at Module._compile (internal/modules/cjs/loader.js:657:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:700:10)
    at Module.load (internal/modules/cjs/loader.js:599:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:538:12)
    at Function.Module._load (internal/modules/cjs/loader.js:530:3)
    at Function.Module.runMain (internal/modules/cjs/loader.js:742:12)
    at startup (internal/bootstrap/node.js:266:19)
/home/heng/myWebsite/app.js:2
const http = express.createServer();
             ^

ReferenceError: express is not defined
    at Object.<anonymous> (/home/heng/myWebsite/app.js:2:14)
    at Module._compile (internal/modules/cjs/loader.js:689:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:700:10)
    at Module.load (internal/modules/cjs/loader.js:599:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:538:12)
    at Function.Module._load (internal/modules/cjs/loader.js:530:3)
    at Function.Module.runMain (internal/modules/cjs/loader.js:742:12)
    at startup (internal/bootstrap/node.js:266:19)
    at bootstrapNodeJSCore (internal/bootstrap/node.js:596:3)
http server start on 80
Server start on port 8080
